Chatgpt integration is started

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port:8081
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=ecommerce
+openai.model=gpt-3.5-turbo
+openai.api.key=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
+openai.api.url=https://api.openai.com/v1/chat/completions
+
