--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=ecommerce
 openai.model=gpt-3.5-turbo
-openai.api.key=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
+openai.api.key=
 openai.api.url=https://api.openai.com/v1/chat/completions
 
